--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ which_crate = { version = "2.0.1", package =  "which" }
 shellexpand = "1.0.0"
 structopt = "0.2.14"
 log = "0.4.6"
+glob = "0.2"
 env_logger = "0.6.0"
 walkdir = "2.2.7"
 console = "0.7.5"
