--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ which_crate = { version = "2.0.1", package =  "which" }
 shellexpand = "1.0.0"
 structopt = "0.3.0"
 log = "0.4.6"
+env_logger = "0.6.1"
 walkdir = "2.2.7"
 console = "0.9.0"
 self_update_crate = { version = "0.8.0", optional = true, package =  "self_update" }
